# umd-dining-status

./: Cargo.toml  README.md
src/: main.rs
