[package]
name = "dining-status"
version = "0.1.5"
edition = "2021"
# author = "Amber Lehmann"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.12", features = ["json", "blocking"]}
